# my-widgets

./: flake.nix  justfile  mywidgets.cabal
src/: Main.hs  MyWidgets.hs
src/MyWidgets/: Bar.hs  Main.hs  Notification.hs  Panel.hs
